# platform

./: .babelrc  .env.docker  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  DEPLOY.md  Pipfile  Procfile  README.md  completed_job_subscriber.py  completed_training_subscriber.py  docker-compose.yml  env.docker  env.sample  file-migration.py  i18n.csv  manage.py  mercadopago.json  package.json  server.js
terra/: .dockerignore  .pre-commit-config.yaml  Dockerfile  Pipfile  Procfile  README.md  adapter.py  admin.py  celery.py  completed_job_subscriber.py  emails.py  env.sample  file-load.py  file-migration.py  payments.py  pyproject.toml  pytest.ini  quota-creation.py  settings.py  tests.py  urls.py  worker.py
terra/bigquery/: client.py  tests.py
terra/common/: utils.py
terra/config/nginx/: terra
terra/config/systemd/: terra-pubsub-subscriber.service  terra-rqworker@.service  titiler.service
terra/credits/: admin.py  apps.py  clients.py  models.py  serializers.py  signals.py  urls.py  views.py
terra/credits/migrations/: 0001_initial.py
terra/docker/: entrypoint.sh  wait-for-postgres.sh
terra/estimators/: admin.py  apps.py  models.py  permissions.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  utils.py  views.py
terra/estimators/migrations/: 0004_imagetile.py  0006_imagetiles_add_window_columns.py  0008_estimators_allow_blank_on_image_files.py  0010_trainingjob.py  0011_fix_unique_on_annotation.py  0012_predictionjob.py  0015_estimator_configuration.py  0017_estimator_image_files.py  0019_add_image_tile_source_image_file_and_fix_indexes_constraints.py  0020_migrate_image_tile_file.py  0021_make_image_tile_source_image_file_non_nullable.py  0022_auto_20200602_1518.py  0023_auto_20200602_1635.py  0025_auto_20200612_1719.py  0027_auto_20200706_1400.py  0028_auto_20200804_2241.py  0029_remove_projects_file_fields.py  0030_auto_20200907_0123.py  0031_auto_20220729_1559.py
terra/estimators/tasks/: __init__.py  annotation.py  predict.py  tile.py  train.py
terra/ml_models/: admin.py  apps.py  constants.py  labfunctions.py  models.py  permissions.py  serializers.py  tasks.py  utils.py  views.py
terra/ml_models/migrations/: 0001_initial.py  0002_auto_20220711_1921.py  0003_auto_20220718_1839.py  0004_auto_20220719_2242.py  0005_auto_20220719_2245.py  0006_auto_20220729_1559.py  0007_auto_20220824_1102.py  0008_auto_20220901_1708.py
terra/ml_models/tests/: conftest.py  test_permissions.py  test_serializers.py  test_tasks.py  test_urls.py  test_utils.py  test_views.py  utils.py
terra/ml_models/utils/: logic.py
terra/projects/: admin.py  mixins.py  models.py  permissions.py  serializers.py  signals.py  tasks.py  tests.py  views.py
terra/projects/migrations/: 0001_initial.py  0002_auto_20181130_1704.py  0005_map.py  0006_auto_20190222_0136.py  0008_auto_20190222_1212.py  0010_auto_20190222_1806.py  0012_auto_20190222_1849.py  0016_auto_20190224_0518.py  0018_auto_20190224_1530.py  0021_projects_set_owners_from_groups.py  0022_image.py  (+32 more)
terra/quotas/: admin.py  models.py  serializers.py  urls.py  views.py
terra/quotations/: __init__.py  admin.py  apps.py  models.py
terra/script/: create_buckets.sh  start_worker.sh
terra/stac/: views.py
terra/storage/: admin.py  client.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
terra/tasks/: admin.py  clients.py  cron.py  models.py  serializers.py  signals.py  states.py  tests.py  urls.py  utils.py  views.py
terra/templates/: early_access_beta.en.html  early_access_beta.en.txt  early_access_beta.es.html  prediction_completed.en.html  prediction_completed.en.txt  prediction_started.en.html  prediction_started.en.txt  prediction_started.es.txt  training_completed.en.html  training_completed.en.txt  training_started.en.html  training_started.en.txt  training_started.es.html  training_started.es.txt  welcome.en.html  welcome.en.txt  welcome.es.txt
terra/templatetags/: global_settings.py
terra/terra/: admin.py  emails.py  payments.py  settings.py  tests.py  urls.py  utils.py  views.py  wsgi.py
terra/tests/: conftest.py
(+390 files in other folders)
