[tool.poetry]
name = "terra"
version = "0.1.0"
description = "Django app that provisions DYMAX internal API and background tasks"
authors = ["Damián Silvani <munshkr@gmail.com>"]
license = "BSD-2-Clause"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
